styles/style.css
.page {
  min-width: 1100px;
  /* мы ещё не умеем делать мобильную версию сайта, */
  /* поэтому выше установлена минимальная ширина страницы */
  max-width: 1600px;
  /* выше установили ограничение по максимальной ширине */
  margin: 0 auto;
  /* выше для экранов больше 1600px отцентрировали весь контент */
  font-family: 'Helvetica Neue', Arial, sans-serif;
}

.header {
  height: 100vh;
  min-height: 600px;
  max-height: 756px; 
  /* выше установили ограничения для секции */
  display: flex;
}

/* ниже мы привели пример двух селекторов, чтобы вы вспомнили запись элемента */

.logo {
  position: absolute;
  top: 30px;
  left: 64px;
}

.header__head-title {
  display: flex;
  width: 730px;
  margin-left: 56px;
  line-height: 96px;
  font-size: 102px;
  font-weight: 600;
  flex-direction: column;
  justify-content: center;
}

.header__subtitle {
  position: absolute;
  width: 388px;
  left: 64px;
  bottom: 30px;
  line-height: 25px;
  font-size: 18px;
  font-weight: 300;
  
}

.header__image-main {
  position: absolute;
  bottom: 0;
  right: 0;
  width: 765px;
  height: 608px;
}

.header__square-pic {
  height: 568px;
  width: 568px;
  background-color: rgb(47 128 237);
  top: 64px;
  right: 0;
  position: absolute;
  z-index: -1;
}

.description {
  display: flex;
  justify-content: center;
  align-items: center;
  margin: 100px 0;
}

.two-columns {
  display: flex;
  justify-content: space-between;
  width: 80%;
  margin: 0;
}

.two-columns__brief {
  width: 175px;
}

.two-columns__subtitle {
  line-height: 1.2;
  font-size: 18px;
  font-weight: normal;
  color: blue;
  margin: 0;
}

.two-columns__main-text {
  width: 80%;
  min-width: 784px;
}

.two-columns__paragraph {
  line-height: 34px;
  font-size: 24px;
  font-weight: normal;
  margin: 0;
}

.two-columns__accent {
  line-height: 34px;
  font-size: 24px;
  font-weight: 600;
  display: inline-block;
  margin: 30px 0;
}

.digits {
  display: flex;
  align-items: center;
  justify-content: center;
  flex-direction: column;
}

.digits__title {
  width: 60%;
  line-height: 1.15;
  font-size: 60px;
  font-weight: 600;
  text-align: center;
  margin-bottom: 20px;
}

.digits__subtitle {
  width: 60%;
  line-height: 34px;
  font-size: 24px;
  font-weight: normal;
  text-align: center;
  margin: 0;  
}

.table {
  display: flex;
  width: 1100px;
  flex-wrap: wrap;
  margin: 60px auto 100px;
  gap: 33px;
}

.table__cell {
  width: 250px;
}

.table__heading {
  line-height: 1.15;
  font-size: 24px;
  font-weight: 600;
  display: inline-block;
  margin-bottom: 20px;
}

.table__text {
  line-height: 1.2;
  font-size: 18px;
  font-weight: normal;
  margin-bottom: 20px;
}

.feynman {
  height: 890px;
  position: relative;
}

.section__titles {
  display: flex;
  justify-content: center;
}

.section__title {
  text-align: center;
  line-height: 1.15;
  font-size: 120px;
  font-weight: 600;
  width: 648px;
  margin: 0;
}

.section__subtitle {
  line-height: 51px;
  font-size: 36px;
  font-weight: normal;
  text-align: center;
  top: 70px;
  position: relative;
}

.section__image {
  position: absolute;
  width: 867px;
  height: 637px;
  z-index: -1;
  left: 0;
  bottom: 0;
}

.section__link {
  position: absolute;
  top: 50%;
  right: 48px;
  line-height: 51px;
  font-size: 36px;
  font-weight: normal;
}

.kaufman {
  display: flex;
  align-items: center;
  justify-content: center;
  flex-direction: column;
  background-color: rgb(31, 31, 31);
  height: 100%;
  width: 100%;
  overflow: hidden;
  margin: 0px;
  z-index: -2;
  position: relative;
}

.section__title_theme_dark {
  width: 60%;
  line-height: 1.15;
  font-size: 60px;
  font-weight: 600;
  text-align: center;
  margin-bottom: 20px;
  margin-top: 90px;
  color: white;
}

.section__subtitle_theme_dark {
  width: 60%;
  line-height: 34px;
  font-size: 24px;
  font-weight: normal;
  text-align: center;
  margin: 0;
  color: white;
}

.table_theme_dark {
  display: flex;
  width: 1100px;
  flex-wrap: wrap;
  margin: 80px auto 100px;
  gap: 20px;
  z-index: 3;
}

.table__cell_theme_dark {
  width: 200px;
  color: white;
  margin-right: 0;
}

.table__heading_theme_dark {
  line-height: 1.15;
  font-size: 24px;
  font-weight: 600;
  display: inline-block;
  margin-bottom: 20px;
  color: white;
}

.table__text_theme_dark {
  line-height: 1.2;
  font-size: 18px;
  font-weight: normal;
  margin-bottom: 20px;
  color: white;
}

.image_theme_dark {
  position: absolute;
  z-index: -1;
  top: 0;
  right: -210px;
}

.footer {
  min-height: 350px;
  background-color: rgb(31, 31, 31);
  position: relative;
}

.footer__columns {
  position: relative;
  display: flex;
  justify-content: space-between;
  width: 90%;
  top: 60px;
  margin: 0 auto;
  min-height: 250px;
}


.footer__column_content_copyright {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  flex-basis: 711px;
}

.logo__place_footer {  
  width: 282px;
  height: 32px;
}

.footer__author {
  color: white;
  bottom: 0;
  line-height: 25px;
  font-size: 18px;
  font-weight: normal;
}

.footer__author-copyright {
  color: white;
  position: absolute;
  bottom: 0;
}

.footer__column-heading {
  color: white;
  line-height: 30px;
  font-size: 18px;
  font-weight: 600;
  margin: 0px;
}

.footer__column-links {  
  margin-top: 20px;
  display: flex;
  flex-direction: column;
}

.footer__column-links a {
  color: white;
  line-height: 30px;
  font-size: 18px;
  font-weight: normal;
  text-decoration: none;
}

.footer__column-links img {
  margin-right: 10px;
}

.footer__column_content_info {
  margin-right: auto;
}

.footer__column_content_social {
  top: 0;
  right: 0;
}

